--- a/{{cookiecutter.project_slug}}/.env
+++ b/{{cookiecutter.project_slug}}/.env
@@ -43,3 +43,6 @@ POSTGRES_DB=app
 PGADMIN_LISTEN_PORT=5050
 PGADMIN_DEFAULT_EMAIL={{cookiecutter.pgadmin_default_user}}
 PGADMIN_DEFAULT_PASSWORD={{cookiecutter.pgadmin_default_user_password}}
+
+# Redis
+REDIS_HOST=redis
