--- a/{{cookiecutter.project_slug}}/backend/app/pyproject.toml
+++ b/{{cookiecutter.project_slug}}/backend/app/pyproject.toml
@@ -24,6 +24,8 @@ alembic = "^1.4.2"
 sqlalchemy = "^1.3.16"
 pytest = "^5.4.1"
 python-jose = {extras = ["cryptography"], version = "^3.1.0"}
+aioredis = "^1.3.1"
+redis = "^3.5.3"
 
 [tool.poetry.dev-dependencies]
 mypy = "^0.770"
