--- a/{{cookiecutter.project_slug}}/.env
+++ b/{{cookiecutter.project_slug}}/.env
@@ -46,3 +46,6 @@ PGADMIN_DEFAULT_PASSWORD={{cookiecutter.pgadmin_default_user_password}}
 
 # Redis
 REDIS_HOST=redis
+
+# Pusher
+TEST_TOKEN_URL=http://{{cookiecutter.docker_image_backend}}/api/v1/login/test-token
