--- a/{{cookiecutter.project_slug}}/backend/app/pyproject.toml
+++ b/{{cookiecutter.project_slug}}/backend/app/pyproject.toml
@@ -27,6 +27,8 @@ python-jose = {extras = ["cryptography"], version = "^3.1.0"}
 aioredis = "^1.3.1"
 redis = "^3.5.3"
 aioredlock = "^0.5.2"
+python-socketio = "^4.6.0"
+aiohttp = "^3.6.2"
 
 [tool.poetry.dev-dependencies]
 mypy = "^0.770"
