Added Pusher service. Added an example for using pusher in utils.

--- a/{{cookiecutter.project_slug}}/.env
+++ b/{{cookiecutter.project_slug}}/.env
@@ -12,6 +12,7 @@ TRAEFIK_PUBLIC_TAG={{cookiecutter.traefik_public_constraint_tag}}
 DOCKER_IMAGE_BACKEND={{cookiecutter.docker_image_backend}}
 DOCKER_IMAGE_CELERYWORKER={{cookiecutter.docker_image_celeryworker}}
 DOCKER_IMAGE_FRONTEND={{cookiecutter.docker_image_frontend}}
+DOCKER_IMAGE_PUSHER={{cookiecutter.docker_image_pusher}}
 
 # Backend
 BACKEND_CORS_ORIGINS={{cookiecutter.backend_cors_origins}}
@@ -48,4 +49,4 @@ PGADMIN_DEFAULT_PASSWORD={{cookiecutter.pgadmin_default_user_password}}
 REDIS_HOST=redis
 
 # Pusher
-TEST_TOKEN_URL=http://{{cookiecutter.docker_image_backend}}/api/v1/login/test-token
+TEST_TOKEN_URL=http://backend/api/v1/login/test-token
