--- a/{{cookiecutter.project_slug}}/docker-compose.yml
+++ b/{{cookiecutter.project_slug}}/docker-compose.yml
@@ -185,6 +185,30 @@ services:
         - traefik.constraint-label-stack=${TRAEFIK_TAG?Variable not set}
         - traefik.http.routers.${STACK_NAME?Variable not set}-frontend-http.rule=PathPrefix(`/`)
         - traefik.http.services.${STACK_NAME?Variable not set}-frontend.loadbalancer.server.port=80
+  pusher:
+    image: '${DOCKER_IMAGE_PUSHER?Variable not set}:${TAG-latest}'
+    depends_on:
+      - redis
+    env_file:
+      - .env
+    environment:
+      - SERVER_NAME=${DOMAIN?Variable not set}
+      - SERVER_HOST=https://${DOMAIN?Variable not set}
+    build:
+      context: ./backend
+      dockerfile: pusher.dockerfile
+      args:
+        INSTALL_DEV: ${INSTALL_DEV-false}
+    deploy:
+      labels:
+        - traefik.enable=true
+        - traefik.constraint-label-stack=${TRAEFIK_TAG?Variable not set}
+        - traefik.http.routers.${STACK_NAME?Variable not set}-pusher-http.rule=PathPrefix(`/socket.io`)
+        - traefik.http.services.${STACK_NAME?Variable not set}-pusher.loadbalancer.server.port=80
+        - traefik.http.services.${STACK_NAME?Variable not set}-pusher.loadbalancer.sticky=true
+        - traefik.http.services.${STACK_NAME?Variable not set}-pusher.loadbalancer.sticky.cookie.httponly=true
+        - traefik.http.services.${STACK_NAME?Variable not set}-pusher.loadbalancer.sticky.cookie.secure=true
+
 
 volumes:
   app-db-data:
