--- a/{{cookiecutter.project_slug}}/backend/app/pyproject.toml
+++ b/{{cookiecutter.project_slug}}/backend/app/pyproject.toml
@@ -28,17 +28,18 @@ aioredis = "^1.3.1"
 redis = "^3.5.3"
 aioredlock = "^0.5.2"
 python-socketio = "^4.6.0"
-aiohttp = "^3.6.2"
+aiohttp = {extras = ["speedups"], version = "^3.6.2"}
+loguru = "^0.5.2"
 
 [tool.poetry.dev-dependencies]
 mypy = "^0.770"
 black = "^19.10b0"
-isort = "^4.3.21"
 autoflake = "^1.3.1"
 flake8 = "^3.7.9"
 pytest = "^5.4.1"
 sqlalchemy-stubs = "^0.3"
 pytest-cov = "^2.8.1"
+isort = "^5.5.1"
 
 [tool.isort]
 multi_line_output = 3
