Added GET_USER_URL & ACCESS_TOKEN_URL config.

--- a/{{cookiecutter.project_slug}}/.env
+++ b/{{cookiecutter.project_slug}}/.env
@@ -48,5 +48,4 @@ PGADMIN_DEFAULT_PASSWORD={{cookiecutter.pgadmin_default_user_password}}
 # Redis
 REDIS_HOST=redis
 
-# Pusher
-TEST_TOKEN_URL=http://backend/api/v1/login/test-token
+GET_USER_URL=http://backend/api/v1/users/me
