Added different Redis dbs for different services.

--- a/{{cookiecutter.project_slug}}/.env
+++ b/{{cookiecutter.project_slug}}/.env
@@ -47,4 +47,7 @@ PGADMIN_DEFAULT_PASSWORD={{cookiecutter.pgadmin_default_user_password}}
 
 # Redis
 REDIS_HOST=redis
+APP_REDIS_DB=0
+CELERY_REDIS_DB=1
+PUSHER_REDIS_DB=2
 
