--- a/{{cookiecutter.project_slug}}/.env
+++ b/{{cookiecutter.project_slug}}/.env
@@ -47,5 +47,7 @@ PGADMIN_DEFAULT_PASSWORD={{cookiecutter.pgadmin_default_user_password}}
 
 # Redis
 REDIS_HOST=redis
+APP_REDIS_DB=0
+CELERY_REDIS_DB=1
+PUSHER_REDIS_DB=2
 
-GET_USER_URL=http://backend/api/v1/users/me
