--- a/{{cookiecutter.project_slug}}/backend/app/pyproject.toml
+++ b/{{cookiecutter.project_slug}}/backend/app/pyproject.toml
@@ -40,6 +40,7 @@ pytest = "^5.4.1"
 sqlalchemy-stubs = "^0.3"
 pytest-cov = "^2.8.1"
 isort = "^5.5.1"
+pytest-asyncio = "^0.14.0"
 
 [tool.isort]
 multi_line_output = 3
