Fix missing username in cookiecutter

--- a/{{cookiecutter.project_slug}}/.env
+++ b/{{cookiecutter.project_slug}}/.env
@@ -18,7 +18,8 @@ DOCKER_IMAGE_PUSHER={{cookiecutter.docker_image_pusher}}
 BACKEND_CORS_ORIGINS={{cookiecutter.backend_cors_origins}}
 PROJECT_NAME={{cookiecutter.project_name}}
 SECRET_KEY={{cookiecutter.secret_key}}
-FIRST_SUPERUSER={{cookiecutter.first_superuser}}
+FIRST_SUPERUSER_USERNAME={{cookiecutter.first_superuser_username}}
+FIRST_SUPERUSER_EMAIL={{cookiecutter.first_superuser_email}}
 FIRST_SUPERUSER_PASSWORD={{cookiecutter.first_superuser_password}}
 SMTP_TLS=True
 SMTP_PORT={{cookiecutter.smtp_port}}
