Add SMS client with a simple utility API

--- a/{{cookiecutter.project_slug}}/.env
+++ b/{{cookiecutter.project_slug}}/.env
@@ -52,3 +52,7 @@ APP_REDIS_DB=0
 CELERY_REDIS_DB=1
 PUSHER_REDIS_DB=2
 
+# SMS
+SMS_API_KEY={{cookiecutter.sms_api_key}}
+SMS_SECRET_KEY={{cookiecutter.sms_secret_key}}
+SMS_TEMPLATE_ID={{cookiecutter.sms_template_id}}
