--- a/{{cookiecutter.project_slug}}/.env
+++ b/{{cookiecutter.project_slug}}/.env
@@ -20,6 +20,7 @@ PROJECT_NAME={{cookiecutter.project_name}}
 SECRET_KEY={{cookiecutter.secret_key}}
 FIRST_SUPERUSER_USERNAME={{cookiecutter.first_superuser_username}}
 FIRST_SUPERUSER_EMAIL={{cookiecutter.first_superuser_email}}
+FIRST_SUPERUSER_MOBILE={{cookiecutter.first_superuser_mobile}}
 FIRST_SUPERUSER_PASSWORD={{cookiecutter.first_superuser_password}}
 SMTP_TLS=True
 SMTP_PORT={{cookiecutter.smtp_port}}
@@ -28,7 +29,7 @@ SMTP_USER={{cookiecutter.smtp_user}}
 SMTP_PASSWORD={{cookiecutter.smtp_password}}
 EMAILS_FROM_EMAIL={{cookiecutter.smtp_emails_from_email}}
 
-USERS_OPEN_REGISTRATION=False
+USERS_OPEN_REGISTRATION=True
 
 SENTRY_DSN={{cookiecutter.sentry_dsn}}
 
