Fix cookiecutter config file

--- a/{{cookiecutter.project_slug}}/cookiecutter-config-file.yml
+++ b/{{cookiecutter.project_slug}}/cookiecutter-config-file.yml
@@ -8,6 +8,7 @@ default_context:
   secret_key: '{{ cookiecutter.secret_key }}'
   first_superuser_username: '{{ cookiecutter.first_superuser_username }}'
   first_superuser_email: '{{ cookiecutter.first_superuser_email }}'
+  first_superuser_mobile: '{{ cookiecutter.first_superuser_mobile }}'
   first_superuser_password: '{{ cookiecutter.first_superuser_password }}'
   backend_cors_origins: '{{ cookiecutter.backend_cors_origins }}'
   smtp_port: '{{ cookiecutter.smtp_port }}'
@@ -18,6 +19,9 @@ default_context:
   postgres_password: '{{ cookiecutter.postgres_password }}'
   pgadmin_default_user: '{{ cookiecutter.pgadmin_default_user }}'
   pgadmin_default_user_password: '{{ cookiecutter.pgadmin_default_user_password }}'
+  sms_api_key": '{{ cookiecutter.sms_api_key }}'
+  sms_secret_key": '{{ cookiecutter.sms_secret_key }}'
+  sms_template_id": '{{ cookiecutter.sms_template_id }}'
   traefik_constraint_tag: '{{ cookiecutter.traefik_constraint_tag }}'
   traefik_constraint_tag_staging: '{{ cookiecutter.traefik_constraint_tag_staging }}'
   traefik_public_constraint_tag: '{{ cookiecutter.traefik_public_constraint_tag }}'
