Separate registrations sms from logins sms

--- a/{{cookiecutter.project_slug}}/cookiecutter-config-file.yml
+++ b/{{cookiecutter.project_slug}}/cookiecutter-config-file.yml
@@ -21,7 +21,8 @@ default_context:
   pgadmin_default_user_password: '{{ cookiecutter.pgadmin_default_user_password }}'
   sms_api_key": '{{ cookiecutter.sms_api_key }}'
   sms_secret_key": '{{ cookiecutter.sms_secret_key }}'
-  sms_template_id": '{{ cookiecutter.sms_template_id }}'
+  sms_registration_template_id": '{{ cookiecutter.sms_registration_template_id }}'
+  sms_login_template_id": '{{ cookiecutter.sms_login_template_id }}'
   traefik_constraint_tag: '{{ cookiecutter.traefik_constraint_tag }}'
   traefik_constraint_tag_staging: '{{ cookiecutter.traefik_constraint_tag_staging }}'
   traefik_public_constraint_tag: '{{ cookiecutter.traefik_public_constraint_tag }}'
